mux-syntax-highlighting/tree-sitter-mux/test/corpus/keywords.txt
==================
Declarations
==================

common func build() returns string { return none }

---

(source_file
  (declaration
    (function_declaration
      name: (identifier)
      return_type: (type_name
        (type_path
          (identifier)))
      (block
        (statement
          (return_statement
            value: (expression
              (logic_or_expression
                (logic_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (sum_expression
                          (product_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (primary_expression
                                    (keyword_constant)))))))))))))))))))

==================
Control
==================

if true { break } else { continue }

---

(source_file
  (statement
    (if_statement
      condition: (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (sum_expression
                    (product_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (primary_expression
                              (literal
                                (boolean))))))))))))))
      (block
        (statement
          (break_statement)))
      (else_clause
        (block
          (statement
            (continue_statement)))))))

==================
Calls
==================

print("x")

---

(source_file
  (statement
    (expression_statement
      (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (sum_expression
                    (product_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (call_expression
                              function: (call_target
                                (identifier))
                              (argument_list
                                (expression
                                  (logic_or_expression
                                    (logic_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (range_expression
                                            (sum_expression
                                              (product_expression
                                                (power_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (literal
                                                          (string_literal))))))))))))))))))))))))))))))

==================
Literals
==================

42

---

(source_file
  (statement
    (expression_statement
      (expression
        (logic_or_expression
          (logic_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (sum_expression
                    (product_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (primary_expression
                              (literal
                                (int_literal)))))))))))))))))
